deploy/manifests/rijksoverheid/base/wallet/verifier/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: wallet-verifier
          image: wallet-verifier-image
          ports:
            - name: requester
              containerPort: 3010
              protocol: TCP
            - name: wallet
              containerPort: 3009
              protocol: TCP
