deploy/manifests/rijksoverheid/base/wallet/verifier/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - protocol: TCP
      port: 3010
      targetPort: requester
      name: requester
    - protocol: TCP
      port: 3009
      targetPort: wallet
      name: wallet
